crates/swc_ecma_parser/tests/flow/type_guards/invalid/asserts_implies_x_is_type.js
type T = (x: any) => asserts implies x is number;
